# revitron-ui-enhancement-framework

./: .gitignore  CHANGELOG.md  CHECKPOINT_1.md  CHECKPOINT_2.md  CONTRIBUTING.md  IMPLEMENTATION_SPECIFICATIONS.md  LICENSE  MANIFEST.in  QUALITY_IMPROVEMENT_REPORT.md  README.md  VALIDATION_RESULTS.md  main_controller.py  pyproject.toml  requirements.txt  setup.py
config/: framework_config.yaml
docs/: API_REFERENCE.md  CONFIGURATION_GUIDE.md  DEPLOYMENT_GUIDE.md  FRAMEWORK.md  PERFORMANCE_TUNING.md  TROUBLESHOOTING.md  USAGE_EXAMPLES.md
src/generation/: button_generator.py
src/implementation/: implementation_specs.py
src/quality/: quality_controller.py
src/research/: api_capability_mapper.py  research_framework.py
src/utils/: error_handling.py  logging_config.py
src/validation/: validation_engine.py
tests/: __init__.py  conftest.py  test_framework.py  test_integration.py  test_performance.py
